--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "route": "^0.2.5"
   },
   "scripts": {
     "start": "PORT=4000 react-scripts start"
